= SMART COSMOS DevKit User Details Service Release Notes

== UNRELEASED

=== New Features

* OBJECTS-980 Add Prometheus-compatible `/metrics` endpoint
* PROFILES-667: add zipkin starter for distributed tracing

=== Bugfixes & Improvements

* OBJECTS-1027 User Details Services return 401 Unauthorized for both wrong Basic Auth service credentials and miss for actual user credentials
* OBJECTS-1034 Invalid User Details Request results in Internal Server Error response from the Auth server

== Release 3.0.0 (August 12, 2016)

Initial release.