@@ -11,6 +11,7 @@
 
 * OBJECTS-1027 User Details Services return 401 Unauthorized for both wrong Basic Auth service credentials and miss for actual user credentials
 * OBJECTS-1034 Invalid User Details Request results in Internal Server Error response from the Auth server
+* OBJECTS-1037 Use User Details Library in services
 
 == Release 3.0.0 (August 12, 2016)
 
